# axum_auth_dev

./: Cargo.toml
public/: app.js
src/: main.rs
templates/: auth.html  login.html
