[package]
name = "axum_auth_dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.5"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.3", features = ["full"] }
http = "0.2"
http-body = "0.4"
headers = "0.3"
jsonwebtoken = "8"
once_cell = "1"
tower-cookies = "0.7"
askama = "0.11"
